# conjugationBot

./: README.md  pyproject.toml
docs/: index.html
scr/conjugationBot/: bot.py
src/conjugation_bot/: bot.py
src/utils/: helper_functions.py  presente.py
